<resources>
    <string name="app_name">UITasks</string>
    <string name="swipe">Swipe</string>
    <string name="SimplePaint">Paint</string>
    <string name="Bubbles">Bubbles</string>
    <string name="Gmail">Gmail</string>
    <string name="GmailV2">GmailV2</string>
    <string name="id">ID:</string>
    <string name="name">NAME:</string>

    <string name="paintContentDescription">Mini Paint is a simple line drawing app.</string>
    <string name="undo">undo</string>
    <string name="redo">redo</string>
    <string name="paint">paint</string>
    <string name="todo">TODO</string>
    <string name="click_me">Click me!</string>
    <string name="expand">Expand</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="Google">Google</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus velit sed arcu facilisis venenatis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer euismod tellus a est facilisis, quis faucibus lorem venenatis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean orci enim, viverra a placerat pulvinar, blandit non lorem.</string>

</resources>
