<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonSwipe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/swipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPaint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/SimplePaint"
        app:layout_constraintEnd_toEndOf="@+id/buttonSwipe"
        app:layout_constraintStart_toStartOf="@+id/buttonSwipe"
        app:layout_constraintTop_toBottomOf="@+id/buttonSwipe" />

    <Button
        android:id="@+id/buttonBubbles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Bubbles"
        app:layout_constraintEnd_toEndOf="@+id/buttonPaint"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonPaint"
        app:layout_constraintTop_toBottomOf="@+id/buttonPaint" />
    <Button
        android:id="@+id/buttonGmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Gmail"
        app:layout_constraintEnd_toEndOf="@+id/buttonBubbles"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonBubbles"
        app:layout_constraintTop_toBottomOf="@+id/buttonBubbles" />

    <Button
        android:id="@+id/buttonGmailV2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/GmailV2"
        app:layout_constraintEnd_toEndOf="@+id/buttonGmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonGmail"
        app:layout_constraintTop_toBottomOf="@+id/buttonGmail" />

</androidx.constraintlayout.widget.ConstraintLayout>